--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pandas = "^1.4.0"
 openpyxl = "^3.0.9"
 docx = "^0.2.4"
 docxtpl = "^0.15.2"
+docxcompose = "^1.3.4"
 
 [tool.poetry.dev-dependencies]
 
