--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,14 @@ authors = ["andrey_berezin"]
 python = "^3.9"
 python-docx = "^0.8.11"
 Django = "^4.0.1"
-celery = "^5.2.3"
-redis = "^4.1.2"
 pandas = "^1.4.0"
 openpyxl = "^3.0.9"
 docx = "^0.2.4"
 docxtpl = "^0.15.2"
 docxcompose = "^1.3.4"
+psycopg2-binary = "^2.9.3"
+django-environ = "^0.8.1"
+whitenoise = "^6.0.0"
 
 [tool.poetry.dev-dependencies]
 
