--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
+amqp==5.1.1; python_version >= "3.7"
 asgiref==3.5.0; python_version >= "3.8"
+async-timeout==4.0.2; python_version >= "3.6"
+billiard==3.6.4.0; python_version >= "3.7"
+celery==5.2.6; python_version >= "3.7"
+click-didyoumean==0.3.0; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.7"
+click-plugins==1.1.1; python_version >= "3.7"
+click-repl==0.2.0; python_version >= "3.7"
+click==8.1.3; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.7"
+colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0"
+deprecated==1.2.13; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 django-environ==0.8.1; python_version >= "3.4" and python_version < "4"
 django==4.0.1; python_version >= "3.8"
 docx==0.2.4
@@ -6,17 +16,25 @@ docxcompose==1.3.4
 docxtpl==0.15.2
 et-xmlfile==1.1.0; python_version >= "3.6"
 jinja2==3.0.3; python_version >= "3.6"
+kombu==5.2.4; python_version >= "3.7"
 lxml==4.7.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 markupsafe==2.0.1; python_version >= "3.6"
 numpy==1.22.1
 openpyxl==3.0.9; python_version >= "3.6"
+packaging==21.3; python_version >= "3.6"
 pandas==1.4.0; python_version >= "3.8"
 pillow==9.0.0; python_version >= "3.7"
-psycopg2==2.9.3; python_version >= "3.6"
+prompt-toolkit==3.0.29; python_full_version >= "3.6.2" and python_version >= "3.7"
+psycopg2-binary==2.9.3; python_version >= "3.6"
+pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.6"
 python-dateutil==2.8.2; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
 python-docx==0.8.11
 pytz==2021.3; python_version >= "3.8"
+redis==4.3.1; python_version >= "3.6"
 six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
 sqlparse==0.4.2; python_version >= "3.8"
 tzdata==2021.5; sys_platform == "win32" and python_version >= "3.8"
+vine==5.0.0; python_version >= "3.7"
+wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.7"
 whitenoise==6.0.0; python_version >= "3.7"
+wrapt==1.14.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
