--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ docxcompose = "^1.3.4"
 psycopg2-binary = "^2.9.3"
 django-environ = "^0.8.1"
 whitenoise = "^6.0.0"
+celery = "^5.2.6"
+redis = "^4.3.1"
 
 [tool.poetry.dev-dependencies]
 
